--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.1.2",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
